fixed company logo containers on landing made not-blurry

--- a/public/css/style1.css
+++ b/public/css/style1.css
@@ -101,7 +101,7 @@ input, textarea {
     margin: 0 auto;
     margin-top: 300px;
     margin-bottom: 120px;
-    filter: blur(3px);
+   /*  filter: blur(3px); */
 }
 .company-logo {
     max-width: 80vw;
@@ -111,7 +111,8 @@ input, textarea {
 }
 .company-logo img {
     max-width: 100%;
-   
+    max-height: 200px;
+    border-radius: 16px;
     filter: drop-shadow(0 0 10px rgba(135, 206, 250, 1));
     opacity: 0.75;
 }
